text align justify correction

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ a { color: teal !important;}
     object-fit: cover;
 }
 
-.text-justify  { 
-    width: 100% !important;
+p  { 
     text-align: justify !important; 
 }
